# SafiEngineV3

./: .gitignore  README.md
Docs/: AGENTS.md  rspress.config.ts
Docs/docs/: _nav.json  index.md
Docs/docs/api/: _meta.json  index.mdx
Docs/docs/api/audio/: _meta.json  audio.mdx
Docs/docs/api/core/: _meta.json  app.mdx  log.mdx  scheduler.mdx  time.mdx
Docs/docs/api/ecs/: _meta.json  camera.mdx  component_registry.mdx  components.mdx  overview.mdx  physics.mdx  resources.mdx  systems.mdx  transform.mdx  visibility.mdx  world.mdx
Docs/docs/api/editor/: _meta.json  editor_camera.mdx  editor_gizmo.mdx  editor_shortcuts.mdx  editor_state.mdx  editor_toolbar.mdx
Docs/docs/api/input/: input.mdx
Docs/docs/api/render/: _meta.json  assets.mdx  camera.mdx  gizmo.mdx  gltf_loader.mdx  lighting.mdx  material.mdx  mesh.mdx  overview.mdx  primitives.mdx  renderer.mdx  shader.mdx
Docs/docs/api/scene/: _meta.json  scene.mdx
Docs/docs/api/ui/: _meta.json  debug_ui.mdx
Docs/docs/roadmap/: _meta.json  editor.mdx  index.mdx
SafiEngine/: .clangd  CMakeLists.txt  README.md
SafiEngine/cmake/: ClangdSetup.cmake  Dependencies.cmake  SafiShaders.cmake  cimgui_bridge.cpp
SafiEngine/engine/: CMakeLists.txt
SafiEngine/engine/include/safi/: safi.h
SafiEngine/engine/include/safi/audio/: audio.h
SafiEngine/engine/include/safi/core/: app.h  log.h  time.h
SafiEngine/engine/include/safi/ecs/: change_bus.h  component_registry.h  components.h  ecs.h  hierarchy.h  phases.h  singleton_tag.h  stable_id.h  transform.h
SafiEngine/engine/include/safi/editor/: editor_camera.h  editor_gizmo.h  editor_shortcuts.h  editor_state.h  editor_toolbar.h  undo.h
SafiEngine/engine/include/safi/input/: input.h
SafiEngine/engine/include/safi/physics/: physics.h
SafiEngine/engine/include/safi/render/: assets.h  camera.h  gizmo.h  gltf_loader.h  light_buffer.h  light_system.h  material.h  mesh.h  model.h  preview.h  primitive_mesh.h  primitive_system.h  render_system.h  renderer.h  shader.h
SafiEngine/engine/include/safi/scene/: presets.h  scene.h
SafiEngine/engine/include/safi/ui/: debug_ui.h  inspector_widgets.h
SafiEngine/engine/shaders/: gizmo_line.hlsl  lit.hlsl
SafiEngine/engine/src/audio/: audio_system.c
SafiEngine/engine/src/core/: app.c
SafiEngine/engine/src/ecs/: change_bus.c  component_registry.c  component_serializers.c  component_serializers.h  components.c  ecs.c  hierarchy.c  singleton_tag.c  stable_id.c  transform.c
SafiEngine/engine/src/editor/: editor_camera.c  editor_gizmo.c  editor_shortcuts.c  editor_state.c  editor_toolbar.c  undo.c
SafiEngine/engine/src/input/: input.c
SafiEngine/engine/src/physics/: jolt_wrapper.cpp  jolt_wrapper.h  physics_system.c
SafiEngine/engine/src/render/: assets.c  camera.c  gizmo.c  gltf_loader.c  light_system.c  material.c  mesh.c  model.c  preview.c  primitive_mesh.c  primitive_system.c  render_system.c  renderer.c  shader.c  shader_load.c
SafiEngine/engine/src/scene/: presets.c  scene.c
SafiEngine/engine/src/ui/: debug_ui.c
SafiEngine/engine/src/ui/shaders/: microui.hlsl  nuklear.hlsl
SafiEngine/examples/gltf_viewer/: CMakeLists.txt  main.c
SafiEngine/examples/gltf_viewer/assets/shaders/: unlit.hlsl  unlit.msl
SafiEngine/examples/gltf_viewer/include/: demo_state.h  scene.h
SafiEngine/examples/gltf_viewer/include/systems/: control_system.h  render_system.h
SafiEngine/examples/gltf_viewer/src/: demo_state.c  main.c  scene.c
SafiEngine/examples/gltf_viewer/src/systems/: control_system.c  render_system.c
